# OpenWand

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GOVERNANCE.md  PROJECT_FOUNDATION.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_BETA.md  RELEASE_NOTES_v020_BETA.md  RELEASE_NOTES_v020_RC1.md  RELEASE_NOTES_v020_STABLE.md  RELEASE_NOTES_v030_STABLE.md  RELEASE_NOTES_v040_STABLE.md  RELEASE_NOTES_v050_STABLE.md  RELEASE_NOTES_v060_STABLE.md  RELEASE_NOTES_v070_STABLE.md  ROADMAP.md  STATE.md  WAVES.md  tmp_chain_cli.rs  tmp_chain_impl.rs
crates/app/: Cargo.toml
crates/app/src/: eval_capability_context.rs  eval_collector.rs  eval_compare.rs  eval_model.rs  eval_post_commit_verify.rs  eval_proposal.rs  eval_proposal_execution.rs  eval_proposal_review.rs  eval_readiness.rs  eval_remote_push_execution.rs  eval_remote_push_proposal.rs  eval_remote_push_readiness.rs  eval_reports.rs  eval_summary.rs  eval_trace.rs  evidence_report.rs  explain.rs  lib.rs  main.rs  memory_coordinator.rs  memory_evaluation.rs  memory_evaluation_model.rs  operation_audit.rs  operation_replay.rs  session_capability.rs  session_capability_prompt.rs  session_runtime.rs  settings.rs  task_planning.rs  ui_main.rs  workflow_action_outcome.rs  workflow_action_routing.rs  workflow_approval_bridge.rs  workflow_audit_packet_distribution.rs  workflow_audit_packet_review.rs  workflow_command_composer.rs  workflow_command_review.rs  workflow_continuation.rs  workflow_evidence_chain_inspector.rs  workflow_execution.rs  (+15 more)
crates/app/tests/: anchor_cli.rs  approval_resolution_desktop.rs  authority_review_guards.rs  cli_command_surface.rs  coordinator_wiring.rs  desktop_interaction_e2e.rs  durability_patch.rs  e2e_flagship.rs  e2e_memory_wiring.rs  eval_cli.rs  eval_collector_guards.rs  eval_flagship.rs  eval_post_commit_verify.rs  eval_proposal.rs  eval_proposal_execution.rs  eval_proposal_guards.rs  eval_proposal_review.rs  eval_proposal_review_guards.rs  eval_readiness.rs  eval_readiness_guards.rs  eval_remote_push_execution.rs  eval_remote_push_proposal.rs  eval_remote_push_readiness.rs  eval_runner.rs  eval_runtime_wiring.rs  evidence_export_desktop.rs  evidence_report_cli.rs  hash_policy_guards.rs  inspector_refresh.rs  integration_delta_guards.rs  integration_delta_proof.rs  linux_gui_smoke_guards.rs  memory_eval_e2e.rs  memory_evaluation_guards.rs  memory_governance_guards.rs  memory_integration.rs  memory_panel.rs  memory_regression.rs  operation_replay.rs  operation_replay_cli.rs  (+71 more)
crates/content/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: ids.rs  lib.rs  memory_vocab.rs  mode.rs  risk.rs  session_vocab.rs  snapshots.rs  tool_vocab.rs
crates/core/tests/: dependency_guards.rs
crates/goals/: Cargo.toml
crates/goals/src/: context.rs  lib.rs  manifest.rs  registry.rs
crates/goals/tests/: dependency_guards.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  error.rs  lib.rs  provider_config.rs  provider_registry.rs  request.rs  response.rs  testing.rs  tool_buffer.rs
crates/llm/tests/: dependency_guards.rs  openai_regression.rs  provider_smoke.rs  sse_buffer_flush.rs
crates/mcp-pool/: Cargo.toml
crates/mcp-pool/src/: config.rs  discovered.rs  error.rs  gateway.rs  lib.rs  pool.rs  result.rs  state.rs  testing.rs
crates/mcp-pool/tests/: mcp_stdio_integration.rs  public_api.rs
crates/memory/: Cargo.toml
crates/memory/src/: conflict.rs  dedup.rs  error.rs  evaluation.rs  evaluation_coverage.rs  evaluation_delta.rs  evaluation_judge.rs  evaluation_report.rs  evidence.rs  extractor.rs  governance.rs  in_memory.rs  lib.rs  memory_store.rs  panel_view.rs  prompt_assembly.rs  provenance.rs  provenance_hydration.rs  query.rs  ranking.rs  retrieval.rs  sqlite_schema.rs  sqlite_store.rs  store.rs  supersession.rs  testing.rs  trace_relation_hydration.rs  types.rs  verification_signal.rs
crates/memory/tests/: conflict.rs  conflict_search.rs  dedup.rs  dedup_acceptance.rs  evidence.rs  evidence_acceptance.rs  evidence_fixtures.rs  memory_extraction.rs  memory_quality.rs  normalized_hash.rs  observation_invariant.rs  prompt_assembly.rs  repo_consistency.rs  retrieval_evidence.rs  retrieval_modes.rs  sqlite_memory.rs  store_conformance.rs  supersession.rs  supersession_wiring.rs  write_authority.rs
crates/policy/: Cargo.toml
crates/policy/src/: builtin.rs  decision.rs  engine.rs  error.rs  eval.rs  lib.rs  mapping.rs  output_guard.rs  request.rs  risk.rs  rule.rs  tool.rs
crates/policy/tests/: authority_boundary.rs  dependency_guards.rs  fail_closed.rs  git_observation_policy.rs  mode_floor.rs  write_gate.rs
crates/session/: Cargo.toml
crates/session/src/: agent_event.rs  approval_recovery.rs  config.rs  error.rs  lib.rs  loro_state.rs  message.rs  mutation.rs  persistence.rs  phase.rs  projector.rs  rebuild.rs  runner.rs  task_context.rs  tool.rs
crates/session/tests/: acceptance.rs  approval_hardening.rs  approval_lifecycle.rs  approval_post_effect.rs  approval_production_path.rs  approval_real_file_effect.rs  approval_recovery_e2e.rs  approval_recovery_scanner.rs  dependency_guards.rs  governed_git_observation.rs  governed_shell_exec.rs  real_provider_validation.rs  rebuild_verification.rs  runner_cancellation.rs  select_approval_target.rs  sqlite_acceptance.rs  tool_deferred_emission.rs  tool_lifecycle.rs  trace_failure_injection.rs  unified_resolution.rs
crates/skills/: Cargo.toml
crates/skills/src/: context.rs  lib.rs  manifest.rs  registry.rs
crates/skills/tests/: dependency_guards.rs
crates/store/: Cargo.toml
crates/store/src/: envelope.rs  error.rs  lib.rs  registry.rs  registry_store.rs
crates/store/tests/: dependency_guards.rs  session_registry.rs  sqlite_migrations_append.rs  sqlite_query_replay.rs  trace_conformance.rs
crates/tools/: Cargo.toml
crates/tools/src/: composite.rs  descriptor.rs  effect.rs  error.rs  executor.rs  file_patch.rs  lib.rs  local.rs  naming.rs  normalize.rs  result.rs  sandbox.rs  sandbox_ntapi.rs
crates/tools/tests/: integration.rs
crates/trace/: Cargo.toml
crates/trace/src/: actor.rs  (+15 more)
crates/workflow/: Cargo.toml
(+383 files in other folders)
