[package]
name = "openwand-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "openwand"
path = "src/main.rs"

[[bin]]
name = "openwand-ui"
path = "src/ui_main.rs"
required-features = ["desktop"]

[lib]
name = "openwand_app"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = "6"
tempfile = "3"
walkdir = "2"
serde_yaml = "0.9"
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
openwand-core = { path = "../core" }
blake3 = { workspace = true }
openwand-session = { path = "../session", features = ["testing"] }
openwand-store = { path = "../store", features = ["sqlite"] }
openwand-tools = { path = "../tools" }
openwand-policy = { path = "../policy" }
openwand-llm = { path = "../llm", features = ["openai-compatible", "testing"] }
openwand-memory = { path = "../memory", features = ["sqlite", "testing"] }
openwand-trace = { path = "../trace", features = ["testing"] }
openwand-skills = { path = "../skills" }
openwand-goals = { path = "../goals" }
openwand-workflow = { path = "../workflow" }

# Desktop UI (feature-gated)
dioxus = { version = "=0.7.9", optional = true, features = ["desktop"] }
dioxus-desktop = { version = "=0.7.9", optional = true }

[features]
real-model-eval = []
default = []
desktop = ["dioxus", "dioxus-desktop"]
memory-regression = []
