[package]
name = "openwand-content"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
syntect = "5"
mermaid-rs-renderer = { version = "0.2", default-features = false }
comrak = "0.28"
