[package]
name = "openwand-llm"
version.workspace = true
edition.workspace = true
description = "OpenWand provider-normalized LLM boundary — session's view of all LLM providers"

[dependencies]
openwand-core = { path = "../core" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tokio = { workspace = true, optional = true }

# No dependency on openwand-session, openwand-trace, openwand-memory,
# openwand-policy, openwand-tools, openwand-mcp-pool, openwand-store,
# loro, rmcp.

[features]
default = []
testing = []
openai-compatible = ["reqwest", "tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
