[package]
name = "openwand-mcp-pool"
version.workspace = true
edition.workspace = true
description = "OpenWand MCP server pool — lifecycle, discovery, and tool execution via rmcp"

[dependencies]
openwand-core = { path = "../core" }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "process"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

rmcp = { version = "=1.7.0", default-features = false, features = [
  "client",
  "transport-child-process",
  "transport-worker",
] }

[features]
default = ["stdio"]
stdio = []
http = ["rmcp/transport-streamable-http-client"]
testing = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
walkdir = "2"
tempfile = "3"
openwand-tools = { path = "../tools" }
tokio-util = { workspace = true }
