[package]
name = "openwand-memory"
version.workspace = true
edition.workspace = true
description = "OpenWand memory — retrieval and knowledge projection"

[dependencies]
openwand-core = { path = "../core" }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
ulid = { version = "1", features = ["serde"] }
blake3 = { workspace = true }

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]
optional = true

[features]
default = []
testing = []
sqlite = ["rusqlite"]
sqlite-testing = ["sqlite"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"
