[package]
name = "openwand-session"
version.workspace = true
edition.workspace = true
description = "OpenWand session — 10-phase agent loop with trace-first mutation"

[dependencies]
openwand-core = { path = "../core" }
openwand-trace = { path = "../trace" }
openwand-llm = { path = "../llm" }
openwand-tools = { path = "../tools" }
openwand-policy = { path = "../policy" }
openwand-memory = { path = "../memory" }
openwand-store = { path = "../store" }

async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
sha2 = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "time", "process"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
loro = { workspace = true }

[features]
default = []
testing = ["openwand-trace/testing"]
sqlite-testing = ["openwand-store/sqlite"]

[dev-dependencies]
cargo_metadata = { workspace = true }
tempfile = "3"
walkdir = "2"
openwand-store = { path = "../store" }
openwand-llm = { path = "../llm", features = ["testing"] }
