[package]
name = "openwand-skills"
version.workspace = true
edition.workspace = true
description = "OpenWand skill definitions — declarative capability context"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }

# No dependency on openwand-session, openwand-tools, openwand-policy,
# openwand-memory, openwand-trace, openwand-store, openwand-core,
# tokio, uuid, walkdir, comrak, chrono, anyhow.
