[package]
name = "openwand-store"
version.workspace = true
edition.workspace = true

[dependencies]
openwand-core = { path = "../core" }
openwand-trace = { path = "../trace" }

async-trait = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ulid = { version = "1" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
openwand-trace = { path = "../trace", features = ["testing"] }

[features]
default = []
testing = ["openwand-trace/testing"]
sqlite = ["rusqlite"]
sqlite-testing = ["sqlite"]

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]
optional = true
