[package]
name = "openwand-tools"
version.workspace = true
edition.workspace = true
description = "OpenWand tool executor — unified local + MCP dispatch seam"

[dependencies]
openwand-core = { path = "../core" }
openwand-mcp-pool = { path = "../mcp-pool" }

async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-util = { workspace = true }
walkdir = "2"
ignore = "0.4"
blake3 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
openwand-mcp-pool = { path = "../mcp-pool" }
